relocates: replace destination_line_id with destination/location
