# xivo_ctid_ng/plugins/relocates/resources.py
@@ -4,18 +4,35 @@
 
 from flask import request
 from marshmallow import Schema, fields
-from marshmallow.validate import OneOf, Length
+from marshmallow.validate import OneOf, Length, Range
 
 from xivo_ctid_ng.auth import get_token_user_uuid_from_request
 from xivo_ctid_ng.auth import required_acl
 from xivo_ctid_ng.rest_api import AuthResource
 
 
+class LineLocationSchema(Schema):
+    line_id = fields.Integer(validate=Range(min=1), required=True)
+
+
+class LocationField(fields.Field):
+
+    _locations = {
+        'line': fields.Nested(LineLocationSchema),
+    }
+
+    def _deserialize(self, value, attr, data):
+        method = data.get('destination')
+        concrete_location = self._locations.get(method)
+        if not concrete_location:
+            return {}
+        return concrete_location._deserialize(value, attr, data)
+
+
 class UserRelocateRequestSchema(Schema):
     initiator_call = fields.Str(validate=Length(min=1), required=True)
-    destination_line_id = fields.Integer(min=1, required=True)
-    flow = fields.Str(validate=OneOf(['ack', 'blind']), missing='blind')
-    timeout = fields.Integer(missing=None, min=1, allow_none=True)
+    destination = fields.Str(validate=OneOf('line'))
+    location = LocationField(missing=dict)
 
 
 user_relocate_request_schema = UserRelocateRequestSchema(strict=True)
@@ -26,8 +43,6 @@ class RelocateSchema(Schema):
     relocated_call = fields.Str(validate=Length(min=1), required=True, attribute='relocated_channel')
     initiator_call = fields.Str(validate=Length(min=1), required=True, attribute='initiator_channel')
     recipient_call = fields.Str(validate=Length(min=1), required=True, attribute='recipient_channel')
-    flow = fields.Str(validate=OneOf(['ack', 'blind']), missing='blind')
-    timeout = fields.Integer(missing=None, min=1, allow_none=True)
 
     class Meta:
         strict = True
@@ -56,9 +71,8 @@ class UserRelocatesResource(AuthResource):
         request_body = user_relocate_request_schema.load(request.get_json(force=True)).data
         user_uuid = get_token_user_uuid_from_request(self._auth_client)
         relocate = self._relocates_service.create_from_user(request_body['initiator_call'],
-                                                            request_body['destination_line_id'],
-                                                            request_body['flow'],
-                                                            request_body['timeout'],
+                                                            request_body['destination'],
+                                                            request_body['location'],
                                                             user_uuid)
         result = relocate_schema.dump(relocate).data
         return result, 201
